# Celegans-simulation

./: CMakeLists.txt  LICENSE.txt  README.md
connectome/: CElegansConnectome.csv  CElegansConnectome.xls  NodesIds.csv
src/: Celegans  Celegans.c  Celegans.h  VSGraphics.h  VSSystem.h  brain.c  brain.h  compile.sh  main.c
